# Orchestra

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  CODE_REVIEW_INDEX.md  CODE_REVIEW_REPORT.md  CONTRIBUTING.md  CRITICAL_FIXES.md  CRITICAL_ISSUES_REVERIFICATION.md  Dockerfile  ENVIRONMENT-LIMITATIONS.md  FINDINGS.json  GEMINI.md  PHASE2_WARNING_TRIAGE_REPORT.md  README.md  REVIEW_SUMMARY.md  REVIEW_VERIFICATION.md  mkdocs.yml  pyproject.toml  pytest_results.txt  run_tests.py  serve_wrapper.py
.claude/: settings.local.json
.claude/agents/: copywriter.md  documentation-writer.md  efficiency-strategist.md  factscore-agent.md  market-researcher.md  selfcheck-agent.md  tot-analyst.md  tree-of-thoughts-agent.md
.claude/skills/factscore/: skill.md
.claude/skills/selfcheck/: skill.md
.claude/skills/tree-of-thoughts/: skill.md
.cursor/rules/: orchestra.mdc
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  mirror-to-gitlab.yml  phase3-gates.yml  release.yml
.planning/: autodiscovery-research.md
.planning/codebase/: LIVE-USE-CODE-REVIEW.md  PRODUCTION-READINESS-ASSESSMENT.md
.planning/debug/: critical-3-4-ucan-scope-narrowing.md  fix-8-unit-test-failures.md  gitlab-mirror-auth-failure.md
.planning/debug/resolved/: critical-1-2-broad-except.md  critical-2-2-tiered-memory-race.md  critical-3-3-ucan-broad-exception.md  critical-4-2-key-rotation.md  critical-4-3-agent-revocation.md
.planning/phases/01-core-engine/: 01-VERIFICATION.md  02-VERIFICATION.md  03-VERIFICATION.md  CODE-REVIEW.md
.planning/phases/02-differentiation/: 02-CONTEXT.md  02-VERIFICATION.md  2.1-VERIFICATION.md  ARCHIVED-AUDIT-2.1.md  ARCHIVED-BACKUP-STRATEGY.md  PHASE2-VERIFICATION.md  PLAN-03-SUMMARY.md  PLAN-04a-SUMMARY.md  PLAN-04a.md  PLAN-04b.md  PLAN-05-SUMMARY.md  PLAN-06.md  PLAN-07-SUMMARY.md  PLAN-07.md  PLAN-08-SUMMARY.md  PLAN-2.1-SUMMARY.md  PLAN-2.1.md  PLAN-2.2-SUMMARY.md  PLAN-2.2.md  PLAN.md  RESEARCH-competitors.md  RESEARCH-events.md  RESEARCH-handoff.md  RESEARCH-hitl.md  RESEARCH-mcp.md  RESEARCH-notebooklm-synthesis.md  RESEARCH-rich-trace.md  WAVE2-VERIFICATION.md  WAVE3-VERIFICATION.md  WAVE4-VERIFICATION.md
.planning/phases/03-production-readiness/: ALL-CRITICALS-VERIFICATION.md  CICD-REVIEW.md  CRITICAL-3-1-VERIFICATION.md  RESEARCH.md  TREE-OF-THOUGHTS-ANALYSIS.md  WEEK1-SECURITY-VERIFICATION.md  WEEK2-CONCURRENCY-VERIFICATION.md
.planning/phases/04-enterprise-scale/: 04-wave2-A1-PLAN.md  04-wave2-A2-PLAN.md  PLAN.md  (+19 more)
deploy/: gvisor-installer-daemonset.yaml  nats-values.yaml  otel-collector.yaml  runtimeclass-gvisor.yaml  runtimeclass-kata.yaml
deploy/base/: orchestra-agent.yaml
docs/: competitive-analysis.md  getting-started.md  index.md
docs/api/: cli.md  core.md  observability.md  providers.md  testing.md  tools.md
docs/concepts/: agents.md  graphs.md  state.md  testing.md
examples/: conditional.py  handoff.py  handoff_basic.py  hitl_review.py  live.py  parallel.py  sequential.py  time_travel.py
load_tests/: README.md  locustfile.py
planning/: API-DESIGN.md  PHASE1-PLAN.md  ROADMAP.md  architecture-plan.md
research/: SUMMARY.md  competitor-analysis.md  domain-ecosystem.md  implementation-patterns.md  tech-stack-recommendation.md
sdk/typescript/: package.json  tsconfig.json  tsup.config.ts
src/orchestra/: __init__.py  _compat.py
tests/: conftest.py  test_smoke.py
tests/chaos/: fault_injectors.py  test_provider_faults.py  test_server_chaos.py  test_storage_faults.py
tests/integration/: test_advanced_examples.py  test_concurrency.py  test_cost_aggregate.py  test_examples.py  test_fastapi_endpoints.py  test_full_stack.py  test_graphs_parallel_edge.py  test_redis_tiered_memory.py  test_reliability.py  test_runs_fork.py  test_secure_nats.py  test_security_attack_paths.py  test_server_discovery.py  test_sse_streaming.py  test_ui_api_endpoints.py
tests/live/: conftest.py  test_live_providers.py
tests/load/: test_1000_concurrent_agents.py  test_budget_contention.py
tests/property/: test_graph_topologies.py
tests/security/: test_gvisor_interception.py  test_nats_e2ee.py  test_wasm_sandbox.py
tests/unit/: test_acl.py  test_agent_identity.py  test_agent_loader.py  test_attenuation.py  test_cache.py  test_callable_provider.py  test_circuit_breaker.py  test_claude_code_provider.py  test_cli_init.py  test_cli_up.py  test_codex_cli_provider.py  test_cold_tier_backend.py  test_compression.py  test_conditional_edge_coercion.py  test_context_concurrency.py  test_context_distill.py  test_core.py  test_cost.py  test_cost_router.py  test_dedup.py  test_deployment_config.py  test_discovery_config.py  test_discovery_validation.py  test_doc_examples.py  test_dynamic_graphs.py  test_e2e_encryption.py  test_events.py  test_gemini_cli_provider.py  test_guardrails.py  test_guardrails_integration.py  test_handoff.py  test_hitl.py  test_hotreload_discovery.py  test_import_safety.py  test_injection_attenuation.py  test_invalidation.py  test_jcs.py  test_managed_proc.py  test_mcp.py  test_memory.py  (+36 more)
(+251 files in other folders)
